:gem: Experimental DL example

--- a/example-post.html
+++ b/example-post.html
@@ -70,6 +70,19 @@ mornings recently, she was a bit disappointed at the lack of time to
 take a proper shower. The logistics app’s timer was its same oppressive
 reminder of the time she was wasting even thinking about a shower.</p>
 
+<dl>
+<dt>Test</dt>
+<dd>Jane grumbled unhappily awake at the notification ping from her tablet,
+realizing it meant some algorithm wanted her stagecoach in motion asap.</dd>
+<dd>Being a common rhetorical complaint for
+Jane, she expected no response from the tablet as she snatched it to see
+the freshly pinged itinerary.</dd>
+<dt>The fresh faced kid staffing the Marriott</dt>
+<dd>Jane
+would just as well prefer to still be asleep, herself. Luckily for the
+kid</dd>
+</dl>
+
 <p>The fresh faced kid staffing the Marriott desk downstairs barely
 bothered to look up to wave a perfunctory hello in Jane’s direction as
 she double timed it through the hotel lobby. Poor kid probably wasn’t
