📦 Bundle JS with esbuild

--- a/example-post.html
+++ b/example-post.html
@@ -488,8 +488,7 @@ shower was waiting for her and food soon after that.</p>
 
 <div id="lb1"></div><div id="lb2"></div><div id="lb3"></div><div id="lb4"></div><div id="lb5"></div><div id="lb6"></div>
 
-<script src="https://cdn.jsdelivr.net/gh/ekalinin/typogr.js@0.6.7/typogr.min.js"></script>
-<script async src="lcars-shell.js"></script>
+<script async src="dist/index.js"></script>
 
   </body>
 
