📦 Bundle gear logo

--- a/example-post.html
+++ b/example-post.html
@@ -18,7 +18,7 @@
   <body>
 
     <header class="site-header" id="hd">
-        <a href="/"><img src="http://media.worldmaker.net/images/wmgear010-trans.png" alt="WorldMaker.net Gear Logo" id="gear" alt="gear" /></a>
+        <a href="/" id="gear" title="WorldMaker.net"></a>
         <h1 id="hd-pt" class="post-title h1">The Crestwood Stage</h1>
         <span class="fill"></span>
         <button type="button" id="scrolldir" class="button is-primary">
